// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBadgeGroup gutterSize none is rendered 1`] = `
<div
  class="euiBadgeGroup"
/>
`;

exports[`EuiBadgeGroup gutterSize s is rendered 1`] = `
<div
  class="euiBadgeGroup euiBadgeGroup--gutterSmall"
/>
`;

exports[`EuiBadgeGroup gutterSize xs is rendered 1`] = `
<div
  class="euiBadgeGroup euiBadgeGroup--gutterExtraSmall"
/>
`;

exports[`EuiBadgeGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiBadgeGroup euiBadgeGroup--gutterExtraSmall testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiBadgeGroup__item"
  >
    <span
      class="euiBadge euiBadge--iconLeft"
      style="background-color:#d3dae6;color:#000"
    >
      <span
        class="euiBadge__content"
      >
        <span
          class="euiBadge__text"
        >
          Content
        </span>
      </span>
    </span>
  </span>
</div>
`;
